# rnnoise_toys

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  clean.sh  config.h.in~  configure  tmp.txt
denoise_examples/: 61-70968-0001_48k.pcm  61-70968-0001_db20_babble-48k-denoise.pcm  61-70968-0001_db20_babble-48k.pcm  _pesq_itu_results.txt  _pesq_results.txt
examples/: rnnoise_demo.c
include/: rnnoise.h
src/: _kiss_fft_guts.h  arch.h  celt_lpc.c  celt_lpc.h  common.h  denoise.c  denoise_training  kiss_fft.c  kiss_fft.h  opus_types.h  pitch.c  pitch.h  rnn.c  rnn.h  rnn_data.c  rnn_data.h  rnn_data.rnnn  rnn_data_tmp.h  rnn_reader.c  rnn_train.py  tansig_table.h  utils.c  utils.h
training/: bin2hdf5.py  dump_rnn.py  rnn_train.py
